--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.android.support:cardview-v7:23.2.1'
+
+    compile 'me.henrytao:smooth-app-bar-layout:0.2.1'
 }
