--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,9 @@ dependencies {
 
     compile 'me.henrytao:smooth-app-bar-layout:0.2.1'
     compile 'net.soulwolf.widget:dialogBuilder:1.0.0'
+    compile ('com.aurelhubert:ahbottomnavigation:1.1.0'){
+        exclude group: 'com.android.support'
+//        exclude group: 'com.android.support:appcompat-v7:23.3.0'
+//        exclude module: 'annotations', group: 'com.google.android'
+    }
 }
