--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".BottomNavigationBar.DemoActivity"
+            android:name=".coordinatorLayout.ScrollActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".BottomSheet.BottomSheetActivity"/>
-
+        <activity android:name=".BottomSheet.BottomSheetActivity" />
     </application>
 
 </manifest>
