--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.tellh.materialdesignlibrarydemo"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -22,11 +22,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:support-v4:23.3.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:cardview-v7:23.3.0'
 
     compile 'me.henrytao:smooth-app-bar-layout:0.2.1'
     compile 'net.soulwolf.widget:dialogBuilder:1.0.0'
@@ -36,4 +36,6 @@ dependencies {
 //        exclude module: 'annotations', group: 'com.google.android'
     }
     compile 'com.github.orhanobut:logger:1.12'
+    compile 'com.github.sundeepk:compact-calendar-view:1.7.8'
+
 }
