--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.github.orhanobut:logger:1.12'
     compile 'com.github.sundeepk:compact-calendar-view:1.7.8'
 
+    compile 'com.github.rubensousa:FloatingToolbar:0.3'
 }
